# lisports

./: .dockerignore  .gitignore  .mise.toml  .oxfmtrc.json  .oxlintrc.json  .yarnrc.yml  Cargo.toml  Dockerfile  README.md  SPEC.md  biome.json  bun.lockb  cypress.config.ts  fly.toml  package.json  remix.config.js  start.sh  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.integration.config.ts  zapatosconfig.json
.github/workflows/: ci.yml  deploy.yml
app/: entry.client.tsx  entry.server.tsx  reqs.ts  root.tsx  stuff.d.ts  utils.ts
app/components/: GameDetails.tsx  GameSummary.tsx  NavBar.tsx  PlayerStats.ts  PrettyPct.tsx  PrettyShooting.tsx  PrettyTable.tsx  Stat.tsx  TeamBox.tsx  TeamGameDetails.tsx  TeamLogo.tsx  ThemePicker.tsx  Winner.tsx
app/models/: PlayerStats.ts  boxScore.ts  standings.ts  stats.ts  todaysScoreboard.ts
app/routes/: _index.tsx  healthcheck.tsx  index.tsx  mlb.scoreboard.tsx  nba.player.$playerId.tsx  nba.scoreboard.$day.game.$gameId.tsx  nba.scoreboard.$day.tsx  nba.scoreboard.tsx  nba.standings.tsx  nfl.scoreboard.tsx  scoreboard.$day.game.$gameId.tsx  scoreboard.$day.tsx  scoreboard.tsx
app/stores/: espn.server.ts  game.server.ts  nba.standings.server.ts  pgPool.server.ts  player.server.ts  scoreboard.server.ts  simpleCache.server.ts
app/styles/: tailwind.css
public/: app.css  manifest.webmanifest  table-sort.js
src/: app.rs  cache.rs  clients.rs  error.rs  leagues.rs  lib.rs  main.rs  models.rs  normalizers.rs  render.rs  routes.rs  stats.rs  validation.rs
tests/: routes.rs
(+10 files in other folders)
